@@ -198,6 +198,17 @@ def test_start_stop_step_parallel(u, run_kwargs, frames, client_FrameAnalysis):
     assert_almost_equal(an.times, frames+1, decimal=4, err_msg=TIMES_ERR)
 
 
+def test_reset_n_parts_to_n_frames(u):
+    # Issue #4685
+    a = FrameAnalysis(u.trajectory)
+    with pytest.warns(UserWarning, match='Set to'):
+        a.run(backend='multiprocessing',
+              start=0,
+              stop=1,
+              n_workers=2,
+              n_parts=2)
+
+
 @pytest.mark.parametrize('run_kwargs,frames', [
     ({}, np.arange(98)),
     ({'start': 20}, np.arange(20, 98)),
